[package]
name = "code-stats-ls"
version = "0.4.3"
repository = "https://github.com/maxdeviant/code-stats-ls"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
heed = "0.20.5"
reqwest = { version = "0.12.7", default-features = true, features = ["rustls-tls", "json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
tower-lsp = "0.20.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.5"
# CI backends to support
ci = "github"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
